Style section about festival

--- a/index.html
+++ b/index.html
@@ -34,5 +34,21 @@
         <source src="video/concierto.webm" type="video/webm" />
       </video>
     </div>
+
+    <div class="about-festival container">
+      <div class="image">
+        <img src="src/img/imagen_vocalista.jpg" alt="Image vocalist" />
+      </div>
+      <div class="festival-content">
+        <h2>Rock & EDM estival</h2>
+        <p class="date">Julio 2021, Rioja, Perú</p>
+        <p class="text">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id nisi,
+          ipsa, recusandae voluptatibus fuga repellendus, dolorum modi esse in
+          dolor eius optio distinctio exercitationem laborum earum impedit. At,
+          neque nesciunt!
+        </p>
+      </div>
+    </div>
   </body>
 </html>
