Style content lineup page

--- a/index.html
+++ b/index.html
@@ -50,5 +50,63 @@
         </p>
       </div>
     </div>
+
+    <div class="lineup">
+      <h3>Line Up</h3>
+
+      <p class="day">Friday 21</p>
+      <div class="stage-content container">
+        <div class="stage rock bg-yellow">
+          <p class="stage-name">Rock Stage</p>
+
+          <ul class="calendar">
+            <li>24:00 | <span>Metallica</span></li>
+            <li>22:00 | <span>Pearl Jam</span></li>
+            <li>20:00 | <span>Korn</span></li>
+            <li>18:00 | <span>Muse</span></li>
+            <li>16:00 | <span>Nirvana</span></li>
+            <li>14:00 | <span>Duft Punk</span></li>
+          </ul>
+        </div>
+
+        <div class="stage edm bg-green">
+          <p class="stage-name">EDM Stage</p>
+          <ul class="calendar">
+            <li>24:00 | <span>Deadmau5</span></li>
+            <li>22:00 | <span>Tiësto</span></li>
+            <li>20:00 | <span>Hardwell</span></li>
+            <li>18:00 | <span>Dash Berlin</span></li>
+            <li>16:00 | <span>Fedde Lagrand</span></li>
+            <li>14:00 | <span>Audien</span></li>
+          </ul>
+        </div>
+      </div>
+
+      <p class="day">Saturday 22</p>
+      <div class="stage-content container">
+        <div class="stage rock bg-green">
+          <p class="stage-name">Rock Stage</p>
+          <ul class="calendar">
+            <li>24:00 | <span>Metallica</span></li>
+            <li>22:00 | <span>Pearl Jam</span></li>
+            <li>20:00 | <span>Korn</span></li>
+            <li>18:00 | <span>Muse</span></li>
+            <li>16:00 | <span>Nirvana</span></li>
+            <li>14:00 | <span>Duft Punk</span></li>
+          </ul>
+        </div>
+        <div class="stage edm bg-yellow">
+          <p class="stage-name">EDM Stage</p>
+          <ul class="calendar">
+            <li>24:00 | <span>Deadmau5</span></li>
+            <li>22:00 | <span>Tiësto</span></li>
+            <li>20:00 | <span>Hardwell</span></li>
+            <li>18:00 | <span>Dash Berlin</span></li>
+            <li>16:00 | <span>Fedde Lagrand</span></li>
+            <li>14:00 | <span>Audien</span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
