Style gallery section page

--- a/index.html
+++ b/index.html
@@ -108,5 +108,12 @@
         </div>
       </div>
     </div>
+
+    <section class="gallery container">
+      <h3>Gallery</h3>
+      <ul class="image-gallery"></ul>
+    </section>
+
+    <script src="build/js/bundle.js"></script>
   </body>
 </html>
