Style tickets and footer page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img src="build/img/imagen_vocalista.jpg" alt="Image vocalist" />
       </div>
       <div class="festival-content">
-        <h2>Rock & EDM estival</h2>
+        <h2>Rock & EDM Festival</h2>
         <p class="date">Julio 2021, Rioja, Perú</p>
         <p class="text">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id nisi,
@@ -113,6 +113,70 @@
       <h3>Gallery</h3>
       <ul class="image-gallery"></ul>
     </section>
+
+    <section class="tickets bg-green">
+      <h3>Tickets</h3>
+
+      <div class="container-tickets container">
+        <div class="basic plan">
+          <p>Pass 2 days</p>
+
+          <table class="pass">
+            <thead>
+              <tr>
+                <th>Include</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Full Access</td>
+              </tr>
+              <tr>
+                <td>Food and Drink</td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <td>$100</td>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+        <div class="premium plan">
+          <p>Pass 3 days</p>
+          <table class="pass">
+            <thead>
+              <tr>
+                <th>Include</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Full Access</td>
+              </tr>
+              <tr>
+                <td>Food and Drink</td>
+              </tr>
+              <tr>
+                <td>T-shirt Event</td>
+              </tr>
+              <tr>
+                <td>VIP Access</td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <td>$100</td>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <p>Rock & EDM Festival. All rights reserved</p>
+    </footer>
 
     <script src="build/js/bundle.js"></script>
   </body>
