Style scroll-smooth and nav-fix feat

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <div class="container header-content">
         <h1>Rock & EDM Festival</h1>
         <nav class="main-nav">
-          <a href="#">Line Up</a>
-          <a href="#">Gallery</a>
-          <a href="#">Tickets</a>
+          <a href="#lineup">Line Up</a>
+          <a href="#gallery">Gallery</a>
+          <a href="#tickets">Tickets</a>
         </nav>
       </div>
     </header>
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div class="lineup">
+    <div id="lineup" class="lineup">
       <h3>Line Up</h3>
 
       <p class="day">Friday 21</p>
@@ -109,12 +109,12 @@
       </div>
     </div>
 
-    <section class="gallery container">
+    <section id="gallery" class="gallery container">
       <h3>Gallery</h3>
       <ul class="image-gallery"></ul>
     </section>
 
-    <section class="tickets bg-green">
+    <section id="tickets" class="tickets bg-green">
       <h3>Tickets</h3>
 
       <div class="container-tickets container">
