--- a/index.html
+++ b/index.html
@@ -178,6 +178,6 @@
       <p>Rock & EDM Festival. All rights reserved</p>
     </footer>
 
-    <script src="build/js/bundle.js"></script>
+    <script src="build/js/bundle.min.js"></script>
   </body>
 </html>
