Fix bug navbar loop

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="about-festival container">
       <div class="image">
-        <img src="build/img/imagen_vocalista.jpg" alt="Image vocalist" />
+        <img src="build/img/imagen_vocalista.webp" alt="Image vocalist" />
       </div>
       <div class="festival-content">
         <h2>Rock & EDM Festival</h2>
